--- a/index.html
+++ b/index.html
@@ -137,22 +137,22 @@
                             </a>
                             <ul class="colorLink">
                                 <li>
-                                    <a href="#" data-href="">
+                                    <a href="diseno-web.html">
                                         <div>Diseño Web</div>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" data-href="">
+                                    <a href="diseno-grafico.html">
                                         <div>Diseño Gráfico</div>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" data-href="">
+                                    <a href="marketing.html">
                                         <div>Marketing Digital</div>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" data-href="">
+                                    <a href="seo.html">
                                         <div>SEO</div>
                                     </a>
                                 </li>
