--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/fonts.css" type="text/css">
     <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="css/business.css">
     <link rel="stylesheet" href="css/swiper.css" type="text/css">
     
     <link rel="stylesheet" href="css/responsive.css" type="text/css">
@@ -491,49 +492,60 @@
                 </div>
             </div>
         </div>
+        <section id="content">
+            <div class="content-wrap nobottompadding" style="z-index: 1;">
+                <div class="container  clearfix">
+                    <div class="section nobg clearfix">
+                        <div class="container clearfix">
+                            <div class="heading-block center">
+                                <h2 class="texto-verde">Ofrecemos los mejores <strong>servicios web</strong> para ti.</h2>
+                            </div>
+                        </div>
+
+                        <div id="oc-features" class="owl-carousel owl-carousel-full image-carousel carousel-widget">
+                            <div class="oc-item">
+                                <div class="row cleafix">
+                                    <div class="col-xl-8">
+                                        <img src="images/servicios/servicio1.png" alt="">
+                                    </div>
+                                    <div class="col-xl-4" style="padding: 20px 0 0 20px;">
+                                        <h3>Great Team Work.</h3>
+                                        <p>Uniquely plagiarize dynamic convergence after equity invested experiences. Holisticly repurpose installed base infomediaries before web-enabled methods of empowerment.</p>
+                                        <a href="#" class="button-link">Read More</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="oc-item">
+                                <div class="row cleafix">
+                                    <div class="col-xl-8">
+                                        <img src="images/servicios/servicio2.png" alt="">
+                                    </div>
+                                    <div class="col-xl-4" style="padding: 20px 0 0 20px;">
+                                        <h3>Amazing Career Prospects.</h3>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor mollitia dignissimos, assumenda consequuntur consectetur! Laborum reiciendis, accusamus possimus et similique nisi obcaecati ex doloremque ea odio.</p>
+                                        <a href="#" class="button-link">Read More</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="oc-item">
+                                <div class="row cleafix">
+                                    <div class="col-xl-8">
+                                        <img src="images/servicios/servicio3.png" alt="">
+                                    </div>
+                                    <div class="col-xl-4" style="padding: 20px 0 0 20px;">
+                                        <h3>Beautiful Workspace.</h3>
+                                        <p>Dolor mollitia dignissimos, assumenda consequuntur consectetur! Laborum reiciendis, error explicabo consectetur adipisci, accusamus possimus et similique nisi obcaecati ex doloremque ea odio.</p>
+                                        <a href="#" class="button-link">Read More</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <div id="servicios" class="section nomargin noborder">
-            <div class="container clearfix">
-                <div class="heading-block center">
-                    <h2 class="texto-verde">Ofrecemos los mejores <strong>servicios web</strong> para ti.</h2>
-                </div>
-                <div class="col_two_fifth topmargin nobottommargin" style="min-height: 350px;">
-                    <img class="rotarImg" src="images/servicios/servicio1.png" alt="">
-                </div>
-                <div class="col_three_fifth nobottommargin col_last">
-                    <div class="heading-block">
-                        <h3 class="texto-verde">Diseño de páginas web</h3>
-                        <span>Reports let you easily track and analyze your product sales, orders, and payments.</span>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero quod consequuntur quibusdam, enim expedita sed quia nesciunt incidunt accusamus necessitatibus modi adipisci officia libero accusantium esse hic, obcaecati, ullam, laboriosam!</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti vero, animi suscipit id facere officia. Aspernatur, quo, quos nisi dolorum aperiam fugiat deserunt velit rerum laudantium cum magnam excepturi quod, fuga architecto provident, cupiditate delectus voluptate eaque! Sit neque ut eum, voluptatibus odit cum dolorum ipsa voluptates inventore cumque a.</p>
-                    <!-- <a href="#">Learn more &rarr;</a> -->
-                </div>
-                <div class="clear"></div><div class="line"></div>
-                <div class="col_three_fifth">
-                    <div class="heading-block">
-                        <h3 class="texto-verde">Diseño de gráfico profesional</h3>
-                        <span>Benchmarking your website's performance helps you make great choices for your business.</span>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero quod consequuntur quibusdam, enim expedita sed quia nesciunt incidunt accusamus necessitatibus modi adipisci officia libero accusantium esse hic, obcaecati, ullam, laboriosam!</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti vero, animi suscipit id facere officia. Aspernatur, quo, quos nisi dolorum aperiam fugiat deserunt velit rerum laudantium cum magnam excepturi quod, fuga architecto provident, cupiditate delectus voluptate eaque! Sit neque ut eum, voluptatibus odit cum dolorum ipsa voluptates inventore cumque a.</p>
-                    <!-- <a href="#">Learn more &rarr;</a> -->
-                </div>
-                <div class="col_two_fifth topmargin col_last" style="min-height: 350px">
-                    <img src="images/servicios/servicio2.png" alt="">
-                </div>
-                <div class="clear"></div><div class="line"></div>
-                <div class="col_two_fifth topmargin nobottommargin" style="min-height: 350px;">
-                    <img src="images/servicios/servicio3.png" alt="">
-                </div>
-                <div class="col_three_fifth nobottommargin col_last">
-                    <div class="heading-block">
-                        <h3 class="texto-verde">Marketing Digital</h3>
-                        <span>Reports let you easily track and analyze your product sales, orders, and payments.</span>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero quod consequuntur quibusdam, enim expedita sed quia nesciunt incidunt accusamus necessitatibus modi adipisci officia libero accusantium esse hic, obcaecati, ullam, laboriosam!</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti vero, animi suscipit id facere officia. Aspernatur, quo, quos nisi dolorum aperiam fugiat deserunt velit rerum laudantium cum magnam excepturi quod, fuga architecto provident, cupiditate delectus voluptate eaque! Sit neque ut eum, voluptatibus odit cum dolorum ipsa voluptates inventore cumque a.</p>
-                    <!-- <a href="#">Learn more &rarr;</a> -->
-                </div>
+            <div class="container clearfix">   
             </div>
         </div>
         <div class="section nomargin noborder bg-azul" id="promoBox2" style="padding: 60px 0 15px 0;">
@@ -932,6 +944,20 @@
 
 		RsParticlesAddOn(revapi108);
 	});
+
+      // Owl Carousel Scripts
+                $('#oc-features').owlCarousel({
+                    items: 1,
+                    margin: 60,
+                    nav: true,
+                    navText: ['<i class="icon-line-arrow-left"></i>','<i class="icon-line-arrow-right"></i>'],
+                    dots: false,
+                    stagePadding: 30,
+                    responsive:{
+                        768: { items: 2 },
+                        1200: { stagePadding: 200 }
+                    },
+                });
     </script>
     <script src="js/main.js"></script>
 </body>
