--- a/diseno-web.html
+++ b/diseno-web.html
@@ -122,37 +122,37 @@
                 <nav id="primary-menu" class="with-arrows clearfix not-dark">
                     <ul class="one-page-menu" data-easing="easeInOutExpo" data-speed="1250" data-offset="160">
                         <li>
-                            <a href="#" data-href="">
+                            <a href="index.html">
                                 <div>Home</div>
                             </a>
                         </li>
                         <li>
-                            <a href="#" data-href="">
+                            <a href="nosotros.html">
                                 <div>Nosotros</div>
                             </a>
                         </li>
                         <li>
-                            <a href="#" data-href="">
+                            <a href="#">
                                 <div>Servicios</div>
                             </a>
                             <ul class="colorLink">
                                 <li>
-                                    <a href="#" data-href="">
+                                    <a href="diseno-web.html">
                                         <div>Diseño Web</div>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" data-href="">
+                                    <a href="diseno-grafico.html">
                                         <div>Diseño Gráfico</div>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" data-href="">
+                                    <a href="marketing.html">
                                         <div>Marketing Digital</div>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" data-href="">
+                                    <a href="seo.html">
                                         <div>SEO</div>
                                     </a>
                                 </li>
@@ -161,28 +161,34 @@
                     </ul>
                     <ul class="one-page-menu" data-easing="easeInOutExpo" data-speed="1250" data-offset="160">
                         <li>
-                            <a href="#" data-href="">
+                            <a href="#" data-href="#trabajos" data-offset="50">
                                 <div>Trabajos</div>
                             </a>
                         </li>
                         <li>
-                            <a href="#" data-href="">
+                            <a href="#" data-href="#footer">
                                 <div>Contacto</div>
                             </a>
                         </li>
                         <li>
-                            <a href="#" data-href="">
+                            <a href="#">
                                 <div>Idioma</div>
                             </a>
                             <ul class="colorLink">
                                 <li>
-                                    <a href="#" data-href="">
-                                        <div>Español</div>
+                                    <a href="index.html">
+                                        <div>
+                                            <img src="images/icons/spain.png" width="20" height="20" style="margin-right: 5px" alt="">
+                                            Español
+                                        </div>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" data-href="">
-                                        <div>Ingles</div>
+                                    <a href="us/index.html">
+                                        <div>
+                                            <img src="images/icons/usa.png" width="20" height="20" style="margin-right: 5px" alt="">
+                                            Ingles
+                                        </div>
                                     </a>
                                 </li>
                             </ul>
@@ -193,14 +199,9 @@
         </div>
     </header>
     <section id="page-title" class="page-title-parallax" style="background-image: url('images/7.jpg'); padding: 220px 0;" data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
-        <div class="container clearfix">
-            <h1 data-animate="fadeInUp">Page Title Parallax</h1>
-            <span data-animate="fadeInUp" data-delay="300">A Short Page Title Tagline</span>
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#">Home</a></li>
-                <li class="breadcrumb-item"><a href="#">Shortcodes</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Page Titles</li>
-            </ol>
+        <div class="container clearfix center">
+            <h1 class="texto-blanco" data-animate="fadeInUp">Page Title Parallax</h1>
+            <span class="texto-blanco" data-animate="fadeInUp" data-delay="300">A Short Page Title Tagline</span>
         </div>
     </section>
     <section id="content">
@@ -218,24 +219,160 @@
                 <i class="icon-whatsapp"></i>
             </a>
         </div>
-        <div id="servicios" class="section nomargin noborder">
+        <div class="section nomargin noborder" id="heading-block-1" style="background: url('images/3.jpg') no-repeat top center; background-size: cover; padding: 80px 0 70px;">
             <div class="container clearfix">
-                <div class="col_two_fifth topmargin nobottommargin" style="min-height: 350px;">
-                    <img class="rotarImg" src="images/servicios/servicio1.png" alt="">
-                </div>
-                <div class="col_three_fifth nobottommargin col_last">
-                    <div class="heading-block">
-                        <h3 class="texto-verde">Diseño de páginas web</h3>
-                        <span>Reports let you easily track and analyze your product sales, orders, and payments.</span>
+                <div class="row clearfix">
+                    <div class="col-lg-5">
+                        <div class="heading-block topmargin">
+                            <h2 class="texto-verde">Diseño Profesional de Páginas web</h2>
+                        </div>
+                        <p class="lead">Create a website that you are gonna be proud of. Be it Business, Portfolio, Agency, Photography, eCommerce &amp; much more.</p>
+                        <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
+                            <i class="icon-line-arrow-right"></i>
+                            <span>Contáctanos</span>
+                        </a>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero quod consequuntur quibusdam, enim expedita sed quia nesciunt incidunt accusamus necessitatibus modi adipisci officia libero accusantium esse hic, obcaecati, ullam, laboriosam!</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti vero, animi suscipit id facere officia. Aspernatur, quo, quos nisi dolorum aperiam fugiat deserunt velit rerum laudantium cum magnam excepturi quod, fuga architecto provident, cupiditate delectus voluptate eaque! Sit neque ut eum, voluptatibus odit cum dolorum ipsa voluptates inventore cumque a.</p>
-                    <!-- <a href="#">Learn more &rarr;</a> -->
+                    <div class="col-lg-7 bottommargin">
+                        <div style="position: relative; margin-bottom: -60px;" class="ohidden" data-height-xl="426" data-height-lg="567" data-height-md="470" data-height-md="287" data-height-xs="183">
+                            <img src="images/main-fbrowser.png" style="position: absolute; top: 0; left: 0;" data-animate="fadeInUp" data-delay="100" alt="Chrome">
+                            <img src="images/main-fmobile.png" style="position: absolute; top: 0; left: 0;" data-animate="fadeInUp" data-delay="400" alt="iPad">
+                        </div>
+                    </div>
                 </div>
-                <div class="clear"></div>
                 <div class="line"></div>
+                <div class="heading-block center">
+                    <h2 class="texto-verde">Texto de relleno</h2>
+                </div>
+                <div class="row">
+                    <div class="col-lg-3 col-sm-6">
+                        <div class="feature-box fbox-center fbox-effect">
+                            <div class="fbox-icon">
+                                <a href="#">
+                                    <i class="i-alt">1</i>
+                                </a>
+                            </div>
+                            <h3 class="texto-verde">Conocemos tu idea</h3>
+                            <p>Aprendemos a visualizar lo que quieres para tu negocio en el <strong>mundo digital</strong>.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-sm-6">
+                        <div class="feature-box fbox-center fbox-effect">
+                            <div class="fbox-icon">
+                                <a href="#">
+                                    <i class="i-alt">2</i>
+                                </a>
+                            </div>
+                            <h3 class="texto-verde"><strong>Diseñamos</strong></h3>
+                            <p>Transformamos tu idea en un diseño  unico para tu <strong>identidad web</strong></p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-sm-6">
+                        <div class="feature-box fbox-center fbox-effect">
+                            <div class="fbox-icon">
+                            <a href="#">
+                                  <i class="i-alt">3</i>
+                            </a>
+                            </div>
+                            <h3 class="texto-verde"><strong>Desarrollamos</strong></h3>
+                            <p>Contamos con una vasta experiencia en diseño de <strong>páginas web a su medida</strong>.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-sm-6">
+                        <div class="feature-box fbox-center fbox-effect">
+                            <div class="fbox-icon">
+                                <a href="#">
+                                <i class="i-alt">4</i>
+                            </a>
+                            </div>
+                            <h3 class="texto-verde">Entregamos <strong>identidad</strong></h3>
+                            <p>Finalizamos todas tus ideas y las hacemos realidad al mejor <strong>precio</strong>.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="line"></div>
+                <div class="row clearfix">
+                    <div class="col-lg-7 bottommargin">
+                        <div style="position: relative; margin-bottom: -60px;" class="ohidden" data-height-xl="426" data-height-lg="567" data-height-md="470" data-height-md="287" data-height-xs="183">
+                            <img src="images/main-fbrowser.png" style="position: absolute; top: 0; left: 0;" data-animate="fadeInUp" data-delay="100" alt="Chrome">
+                            <img src="images/main-fmobile.png" style="position: absolute; top: 0; left: 0;" data-animate="fadeInUp" data-delay="400" alt="iPad">
+                        </div>
+                    </div>
+                    <div class="col-lg-5">
+                        <div class="heading-block topmargin">
+                            <h2 class="texto-verde">eCommerce</h2>
+                        </div>
+                        <p class="lead">Create a website that you are gonna be proud of. Be it Business, Portfolio, Agency, Photography, eCommerce &amp; much more.</p>
+                        <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
+                            <i class="icon-line-arrow-right"></i>
+                            <span>Contáctanos</span>
+                        </a>
+                    </div>
+                </div>
+                <div class="line"></div>
+                <div id="testimonios">
+                    <div class="heading-block center">
+                        <h2 class="texto-verde"><b>Clientes</b> que han confiado en nosotros.</h2>
+                    </div>
+                    <div id="oc-testi" class="owl-carousel testimonials-carousel carousel-widget clearfix" data-margin="0" data-pagi="true" data-loop="true" data-center="true" data-autoplay="5000" data-items-sm="1" data-items-md="2" data-items-xl="3">
+                        <div class="oc-item">
+                            <div class="testimonial">
+                                <div class="testi-content">
+                                    <p>Incidunt deleniti blanditiis quas aperiam recusandae consequatur ullam quibusdam cum libero illo rerum repellendus!</p>
+                                    <div class="testi-meta">
+                                        John Doe
+                                        <span>XYZ Inc.</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="oc-item">
+                            <div class="testimonial">
+                                <div class="testi-content">
+                                    <p>Natus voluptatum enim quod necessitatibus quis expedita harum provident eos obcaecati id culpa corporis molestias.</p>
+                                    <div class="testi-meta">
+                                        Collis Ta'eed
+                                        <span>Envato Inc.</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="oc-item">
+                            <div class="testimonial">
+                                <div class="testi-content">
+                                    <p>Natus voluptatum enim quod necessitatibus quis expedita harum provident eos obcaecati id culpa corporis molestias.</p>
+                                    <div class="testi-meta">
+                                        Collis Ta'eed
+                                        <span>Envato Inc.</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="oc-item">
+                            <div class="testimonial">
+                                <div class="testi-content">
+                                    <p>Natus voluptatum enim quod necessitatibus quis expedita harum provident eos obcaecati id culpa corporis molestias.</p>
+                                    <div class="testi-meta">
+                                        Mary Jane
+                                        <span>Google Inc.</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="oc-item">
+                            <div class="testimonial">
+                                <div class="testi-content">
+                                    <p>Natus voluptatum enim quod necessitatibus quis expedita harum provident eos obcaecati id culpa corporis molestias.</p>
+                                    <div class="testi-meta">
+                                        Steve Jobs
+                                        <span>Apple Inc.</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
+         </div>
     </section>
     <footer id="footer" class="bg-azul">
         <div class="container">
