--- a/diseno-web.html
+++ b/diseno-web.html
@@ -113,10 +113,10 @@
                 </div>
                 <div id="logo">
                     <a href="index.html" class="standard-logo" data-sticky-logo="images/logos/logo.png">
-                        <img src="images/logos/logoblanco.png" alt="CreativosPlus">
+                        <img style="margin-right:50px" src="images/logos/logoblanco.png" alt="CreativosPlus">
                     </a>
                     <a href="index.html" class="retina-logo" data-sticky-logo="images/logos/logo.png">
-                        <img src="images/logos/logoblanco.png" alt="CreativosPlus">
+                        <img style="margin-right:50px" src="images/logos/logoblanco.png" alt="CreativosPlus">
                     </a>
                 </div>
                 <nav id="primary-menu" class="with-arrows clearfix not-dark">
